[project]
name = "climtools"
version = "0.0.1"
authors = [
  { name="Gregory E. Maurer", email="gmaurer@nmsu.edu" },
]
description = "Tools for working with weather or climate data"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gremau/climtools"
"Bug Tracker" = "https://github.com/gremau/climtools/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"